# statstests

./: .buildinfo  .gitignore  AUTHORS  ChangeLog  LICENSE.txt  README.md  deploy.sh  genindex.html  index.html  install.html  modules.html  objects.inv  process.html  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py  tests.html
.github/workflows/: doc_pages.yml  main.yml
_sources/: install.rst.txt
docs/source/: conf.py  modules.rst  process.rst  tests.rst
statstests/: process.py  tests.py
statstests/datasets/: util.py
statstests/datasets/bebes/: __init__.py  bebes.csv
statstests/datasets/corruption/: __init__.py  corruption.csv
statstests/datasets/empresas/: __init__.py  empresas.csv
statstests/process/: __init__.py
statstests/pytests/: test.py
statstests/tests/: __init__.py
