[metadata]
name            = statstests
author          = Helder Prado Santos, Luiz Paulo Fávero
author-email    = pystatstests@gmail.com
description-file = README.md
long-description-content-type = text/markdown
license = MIT
classifier = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: Microsoft :: Windows  
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords =
    statstests, statsmodels, statistical tests, statistical process